# publify_agents_groq

./: Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml  report.md
src/novo_back/: crew.py  main.py
src/novo_back/config/: agents.yaml  tasks.yaml
